# collab-md

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  install.sh  mix.exs  test_e2e.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
cli/: .gitignore  mix.exs
cli-rust/: Cargo.toml
cli-rust/src/: crdt.rs  lib.rs  main.rs  patch.rs  phoenix.rs  sync.rs
cli-rust/tests/: e2e.rs
cli/lib/: collab_cli.ex
cli/lib/collab_cli/: channel_client.ex  sync.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/superpowers/plans/: 2026-04-09-collab-md.md
lib/: collab_md.ex  collab_md_web.ex
lib/collab_md/: application.ex  patch.ex  rate_limiter.ex  room.ex  room_supervisor.ex
lib/collab_md_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/collab_md_web/channels/: room_channel.ex  user_socket.ex
lib/collab_md_web/controllers/: error_json.ex  room_controller.ex  room_page_controller.ex
priv/static/: room.html
test/collab_md/: patch_test.exs  rate_limiter_test.exs  room_supervisor_test.exs  room_test.exs
test/collab_md_web/channels/: room_channel_test.exs
test/collab_md_web/controllers/: error_json_test.exs  room_controller_test.exs
test/support/: channel_case.ex  conn_case.ex
