[package]
name = "collab"
version = "0.1.0"
edition = "2021"
description = "Live collaborative markdown editing CLI"

[lib]
name = "collab"
path = "src/lib.rs"

[[bin]]
name = "collabmd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
notify = "6"
similar = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
yrs = "0.21"
base64 = "0.22"

[profile.release]
strip = true
lto = true
opt-level = "z"
